Fix [#21775] Double-clicking icons in the file browser doesn't open files

Complicated issue, but this should be correct, and testing goes fine. fingers crossed.